# polypus

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  configuration_backend.json  deny.toml  install.sh  pyproject.toml  requirements-dev.txt  requirements-examples.txt  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
benchmarks/: bench_batching.py  bench_native_vs_qiskit.py  run_benchmarks.py
crates/polypus/: Cargo.toml
crates/polypus-circuit/: Cargo.toml
crates/polypus-circuit/src/: circuit.rs  error.rs  gate.rs  lib.rs  qasm.rs  qasm_import.rs  qir.rs
crates/polypus-circuit/tests/: circuit.rs  circuit_qasm.rs  circuit_qir.rs  contracts.rs  error.rs  gate.rs  hardening.rs  qasm_import.rs
crates/polypus-logger/: Cargo.toml
crates/polypus-logger/src/: lib.rs
crates/polypus-optimizers/: Cargo.toml
crates/polypus-optimizers/src/: differential_evolution.rs  error.rs  lib.rs  objective.rs  outcome.rs  pso.rs  quantum_natural_gradient.rs  rng.rs  util.rs
crates/polypus-optimizers/tests/: optimizers.rs
crates/polypus-physics/: Cargo.toml
crates/polypus-physics/examples/: photon_100kvp_water.rs
crates/polypus-physics/examples/reference/: topas_100kev_water.txt
crates/polypus-physics/examples/results/: depth_dose_100kev_water.csv  voxel_dose_100kev_water.csv
crates/polypus-physics/src/: constants.rs  error.rs  lib.rs
crates/polypus-physics/src/hamiltonians/: mod.rs  photon_polarization.rs
crates/polypus-physics/src/interactions/: mod.rs
crates/polypus-physics/src/interactions/photon/: compton.rs  mod.rs  pair_production.rs  photoelectric.rs
crates/polypus-physics/src/interactions/proton/: mod.rs
crates/polypus-physics/src/medium/: mod.rs  simple.rs
crates/polypus-physics/src/monte_carlo/: geometry.rs  history.rs  mod.rs  sampler.rs  spectrum.rs  voxel.rs
crates/polypus-physics/src/particle/: mod.rs  photon.rs  proton.rs
crates/polypus-sim/: Cargo.toml
crates/polypus-sim/src/: error.rs  gates.rs  kernels.rs  lib.rs  measure.rs  rng.rs  simulator.rs  statevector.rs
crates/polypus-sim/tests/: canonical_states.rs  contracts.rs  gate_matrices.rs  scalability.rs
crates/polypus/examples/: prueba_logger.rs
crates/polypus/src/: exceptions.rs  lib.rs  logger.rs  utils.rs
crates/polypus/src/algorithms/: mod.rs
crates/polypus/src/algorithms/orchestration/: distribute_by_shots.rs  single_run.rs
crates/polypus/src/bindings/: circuit.rs  de.rs  logging.rs  mod.rs  pso.rs  qng.rs
crates/polypus/src/evaluation/: error.rs  mod.rs  qml_oracle.rs  vqc_oracle.rs
crates/polypus/src/infrastructure/: cunqa.rs  error.rs  execution_config.rs  local.rs  mod.rs  native.rs  qmio.rs  transpiler.rs
crates/polypus/tests/: native_circuit_path.rs  running_quantum_circuits_local.rs
docs/: CONTRACTS.md  CONTRIBUTING.md  ENGINEERING.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/adr/: 0001-terminal-measurements.md
docs/doc/: help.html  search-index.js  settings.html  src-files.js
docs/doc/polypus/: all.html  index.html  sidebar-items.js
docs/doc/polypus/algorithms/: fn.differential_evolution.html  fn.raise_qpus.html  fn.run_quantum_circuit.html  index.html  sidebar-items.js  struct.AlgorithmArgs.html  struct.AlgorithmDifferentialEvolution.html  struct.AlgorithmDifferentialEvolutionArgs.html  struct.AlgorithmDistributeByShots.html  struct.AlgorithmSingleRun.html  trait.AlgorithmTrait.html
docs/doc/polypus/infrastructure/: enum.Infrastructure.html  index.html  trait.QuantumRunner.html
docs/doc/search.desc/polypus/: polypus-desc-0-.js
docs/doc/src/polypus/: bindings.rs.html  lib.rs.html
docs/polypus/: all.html  index.html  sidebar-items.js
docs/polypus/algorithms/: index.html  sidebar-items.js  struct.AlgorithmArgs.html  trait.AlgorithmTrait.html
docs/polypus/algorithms/orchestration/: index.html
docs/polypus/algorithms/vqc/: index.html  sidebar-items.js
docs/polypus/infrastructure/: enum.Infrastructure.html  index.html  sidebar-items.js  trait.QuantumRunner.html
docs/polypus/infrastructure/cunqa/: index.html  struct.CunqaRunner.html
docs/polypus/infrastructure/local/: index.html  struct.LocalRunner.html
docs/search.desc/polypus/: polypus-desc-0-.js
docs/src/polypus/: lib.rs.html
docs/src/polypus/algorithms/: mod.rs.html
docs/src/polypus/bindings/: de.rs.html  mod.rs.html  pso.rs.html  qng.rs.html
docs/src/polypus/infrastructure/: cunqa.rs.html  local.rs.html  mod.rs.html
docs/trait.impl/core/fmt/: trait.Debug.js
docs/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  (+2 more)
examples/: basic_polypus.py  basic_qml.py  experiment_max_cut.sh  infraestructures.py  max_cut_qaoa.py  polypus_cunqa_basic.py  single_run.py
examples/max_cut/: README.md  maxcut_lib.py  report_maxcut.py  run_maxcut.py  sweep_maxcut.py
examples/max_cut/demo/: maxcut_report.html  maxcut_report.md  maxcut_results.csv
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/from_qasm2/: broadcast.qasm  expressions.qasm  qiskit_dumps.qasm  vocabulary.qasm
fuzz/fuzz_targets/: from_qasm2.rs
src/: bindings.rs  lib.rs  utils.rs
src/algorithms/: mod.rs
src/algorithms/orchestration/: distribute_by_shots.rs  mod.rs  single_run.rs
src/algorithms/vcq/: differential_evolution.rs  mod.rs
src/algorithms/vqc/: differential_evolution.rs  mod.rs  pso.rs  quantum_natural_gradient.rs
src/bindings/: mod.rs  pso.rs  qng.rs
src/evaluation/: mod.rs  qml_oracle.rs  vqc_oracle.rs
src/infrastructure/: cunqa.rs  execution_config.rs  local.rs  mod.rs
tests/: running_quantum_circuits_local.rs
tests/python/: conftest.py  test_backend_selection.py  test_error_hierarchy.py  test_evaluation_extraction.py  test_interrupt.py  test_local_run.py  test_logging.py  test_max_cut_experiment.py  test_max_cut_sweep.py  test_native_circuit.py  test_oracle_contract.py  test_qasm_import.py  test_qml_error_propagation.py  test_qml_train_validation.py  test_seam_contract.py  test_seam_extraction.py  test_seed_reproducibility.py  test_smoke.py  test_statevector.py  test_vqc.py
(+62 files in other folders)
