# Polypus Cargo workspace.
#
# Crates:
#   - crates/polypus-circuit : pure-Rust quantum circuit representation + OpenQASM 2.0 export
#                              (no PyO3, no Python — usable from any Rust project)
#   - crates/polypus-physics : pure-Rust particle-physics layer (classical Monte Carlo
#                              transport + quantum Hamiltonians as Pauli sums; no PyO3)
#   - crates/polypus-sim     : pure-Rust statevector simulator consuming polypus-circuit's
#                              ConcreteCircuit directly (no OpenQASM round-trip; no PyO3)
#   - crates/polypus-optimizers : pure-Rust variational optimizers (DE, PSO, QNG) decoupled
#                              from circuits and Python via EvaluationOracle/VarianceOracle
#   - crates/polypus-logger  : pure-Rust logging sink (a `log::Log` implementation) shared by
#                              the whole workspace; libraries emit via the `log` facade, only
#                              the app layer installs it (no PyO3)
#   - crates/polypus         : the Polypus library and Python extension module (PyO3)
[workspace]
members = ["crates/polypus", "crates/polypus-circuit", "crates/polypus-physics", "crates/polypus-sim", "crates/polypus-optimizers", "crates/polypus-logger"]
resolver = "2"

# Shared package metadata, inherited by member crates via `<key>.workspace = true`.
[workspace.package]
version = "0.4.0"
edition = "2021"
# MSRV, guarded by the `msrv` CI job. Currently set by the dependency tree
# (the qmio feature pulls `saa`, which uses edition 2024 → Cargo 1.85); the
# workspace's own code needs far less. Bump deliberately when a dep requires it.
rust-version = "1.85"
authors = ["Diego Beltran Fernandez Prada <diego.fernandez@bahiasoftware.es>", "Victor Soñora Pombo", "Sergio Figueiras Gomez", "Miguel Boubeta Martinez", "Galicia Supercomputing Center (CESGA)"]
# SPDX identifier (required by cargo-deny and crates.io). The full licence
# text, including the "or subsequent versions approved by the European
# Commission" clause, lives in the LICENSE file at the repo root.
license = "EUPL-1.2"

[workspace.dependencies]
polypus-circuit    = { path = "crates/polypus-circuit", version = "0.4.0" }
polypus-physics    = { path = "crates/polypus-physics", version = "0.4.0" }
polypus-sim        = { path = "crates/polypus-sim", version = "0.4.0" }
polypus-optimizers = { path = "crates/polypus-optimizers", version = "0.4.0" }
polypus-logger     = { path = "crates/polypus-logger", version = "0.4.0" }

# Shared external dependencies pinned once for the whole workspace.
# `log` is the logging facade every crate emits through; the concrete sink lives
# in `polypus-logger`, which additionally enables its `std` feature.
log                = "0.4"
