[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "polypus"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["extension-module"]
# The repo is a Cargo workspace; the PyO3 extension crate lives here.
manifest-path = "crates/polypus/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "integration: tests that execute real quantum circuits (require AerSimulator)",
    "vqc: tests that train variational quantum circuits (slow)",
]
