[package]
name              = "polypus-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description       = "Pure-Rust statevector simulator for Polypus circuits: consumes polypus-circuit's ConcreteCircuit directly (no OpenQASM round-trip), GIL-free, with optional rayon parallelism. No Python."

[lib]
name = "polypus_sim"

[dependencies]
polypus-circuit = { workspace = true }
num-complex     = "0.4"
rayon           = { version = "1", optional = true }
# Logging *facade* only (no sink): orchestration-level diagnostics are emitted
# through `log::*!` and stay no-ops until the app layer installs a logger. This
# crate never depends on `polypus-logger`.
log             = { workspace = true }

[features]
default  = []
# Opt-in data-parallel gate kernels (rayon). Results are identical to the
# sequential path; only large circuits (see DEFAULT_PARALLEL_THRESHOLD) use it.
parallel = ["dep:rayon"]
