[package]
name = "polypus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polypus"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["info-logs"]
off-logs = ["log/max_level_off", "log/release_max_level_off"]
error-logs = ["log/max_level_error", "log/release_max_level_error"]
warn-logs = ["log/max_level_warn", "log/release_max_level_warn"]
info-logs = ["log/max_level_info", "log/release_max_level_info"]
debug-logs = ["log/max_level_debug", "log/release_max_level_debug"]
trace-logs = ["log/max_level_trace", "log/release_max_level_trace"]

[dependencies]
polypus-circuit = { workspace = true }
polypus-sim = { workspace = true, features = ["parallel"] }
pyo3 = { version = "0.24.2", features = ["num-complex"] }
rand = "0.8"
ndarray = "0.16"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
fern = "0.6"
humantime = "2.1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }