[package]
name = "polypus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polypus"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["pyo3/extension-module"]
# Real CESGA QMIO QPU backend. Opt-in so the default build never pulls a ZeroMQ
# stack. Uses the pure-Rust `zeromq` crate (no system libzmq required) plus
# `serde-pickle` to speak the QMIO wire protocol (pickle over a ZMQ REQ socket).
# `tokio/net` enables the runtime IO driver that the async `zeromq` sockets need.
qmio = ["dep:zeromq", "dep:serde-pickle", "tokio/net"]
default = ["info-logs"]
# Compile-time max log level, forwarded to the shared `polypus-logger` crate
# (which in turn toggles the `log` crate's global `max_level_*` features).
off-logs   = ["polypus-logger/off-logs"]
error-logs = ["polypus-logger/error-logs"]
warn-logs  = ["polypus-logger/warn-logs"]
info-logs  = ["polypus-logger/info-logs"]
debug-logs = ["polypus-logger/debug-logs"]
trace-logs = ["polypus-logger/trace-logs"]

[dependencies]
polypus-circuit = { workspace = true }
polypus-sim = { workspace = true, features = ["parallel"] }
polypus-optimizers = { workspace = true }
polypus-logger = { workspace = true }
pyo3 = { version = "0.24.2", features = ["num-complex"] }
rand = "0.8"
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
# --- optional, only compiled with `--features qmio` ---
# Pure-Rust ZeroMQ (ZMTP 3.x, interoperable with pyzmq/libzmq); avoids a C
# `libzmq` build dependency at the cost of an async (tokio) API.
zeromq = { version = "0.6", optional = true }
# Reads/writes Python's pickle format WITHOUT executing __reduce__/GLOBAL, so a
# malicious peer cannot achieve RCE the way Python's `pickle.loads` allows.
serde-pickle = { version = "1.2", optional = true }